Updation according to doc file

--- a/app/myProfile/addTestCenter/optionalFields/view.html
+++ b/app/myProfile/addTestCenter/optionalFields/view.html
@@ -1,11 +1,11 @@
 <div class="container progress-content">
   <div class="progressbar">
     <div class="col-md-6 col-md-offset-6">
-      <div class="progress progress-grediant">
+      <!-- <div class="progress progress-grediant">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
           <span class="stick-me">40%</span>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="clearfix"></div>
@@ -64,7 +64,7 @@
               <i class="fa fa-times" ng-show="$ctrl.logoPreview" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteLogo()" aria-hidden="true" tooltip-placement="right" uib-tooltip="Please upload the logo of your company/treatment center"></i>
             </div>
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload images of your company/treatment center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload logo of your Treatment Center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
           <div class="form-group clear-me">
@@ -75,7 +75,7 @@
               <input name="gallery[]" id="gallery_data" class="file" type="file" file-model="$ctrl.galleryData" onchange="angular.element(this).scope().imagePreviewMulti(this)" multiple="multiple" accept="image/*">
             </div>
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please enter photos of your Treatment Center Gallery to show"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
 
