--- a/app/myProfile/addTestCenter/sponsoredPage/view.html
+++ b/app/myProfile/addTestCenter/sponsoredPage/view.html
@@ -3,7 +3,7 @@
     <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
       <form name="$ctrl.sponsoredPage" enctype="multipart/form-data" id="addlistForm">
         <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-          <p class="heading_treatment_center">Choose your options below to sponsor treatment center</p>
+          <p class="heading_treatment_center">Choose your options below to sponsor {{$ctrl.currentCenter[0].label}}</p>
         </div>
 
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
