--- a/app/signUp/testCenter/view.html
+++ b/app/signUp/testCenter/view.html
@@ -35,15 +35,15 @@
 
           </div>
 
-          <div class="form-group">
+          <div class="form-group" ng-click="$ctrl.catgsToggleFun()" ng-init="$ctrl.catgsToggle=1">
             <input type="text" class="form-control" placeholder="Categories" readonly="readonly">
-            <span class="fix-right" ng-click="$ctrl.catgsToggleFun()" ng-init="$ctrl.catgsToggle=1" tooltip-placement="right" data-toggle="collapse" data-target="#collapse-catg" uib-tooltip="Show/hide Category"><i class="fa fa-arrow-down fa-2x"></i></span>
+            <span class="fix-right" tooltip-placement="right" data-toggle="collapse" data-target="#collapse-catg" uib-tooltip="Show/hide Category"><i class="fa fa-arrow-down fa-2x"></i></span>
           </div>
 
           <div class="form-group checkboxFive2-category" ng-if="$ctrl.catgsToggle!==1">
             <div ng-repeat="catgs in $ctrl.centerCategories" class="checkboxFive2" style="padding-bottom:7px;padding-left:11px;padding-right:4px;">
-              <input type="checkbox" id="catgs{{catgs.id}}" {{$ctrl.catgCheckedString[catgs.id]}}  name="catg[]" ng-model="$ctrl.categoryModel[catgs.id]" ng-click="$ctrl.catgChecked(catgs.id,$ctrl.categoryModel[catgs.id]);" />
-              <span> {{catgs.label}}</span>
+              <input type="checkbox" id="catgs{{catgs.id}}" {{$ctrl.catgCheckedString[catgs.id]}} name="catg[]" ng-model="$ctrl.categoryModel[catgs.id]" ng-click="$ctrl.catgChecked(catgs.id,$ctrl.categoryModel[catgs.id]);" />
+              <span style="cursor:pointer;" ng-click="$ctrl.catgChecked(catgs.id,$ctrl.categoryModel[catgs.id],'label_click');"> {{catgs.label}}</span>
               <label for="catgs{{catgs.id}}" class="tooltiptext {{$ctrl.catgCheckedString[catgs.id]}}"></label>
             </div>
           </div>
@@ -75,26 +75,26 @@
             <!-- <span ng-show="$ctrl.centerForm.address.$invalid && ($ctrl.centerFormInit.address===0)" class="help-block">Required</span> -->
 
           </div>
-          <div class="form-group">
+          <div class="form-group" ng-click="$ctrl.tagsToggleFun()" ng-init="$ctrl.tagsToggle=1">
             <input type="text" class="form-control" placeholder="Tags/ Labels" readonly="readonly">
             <!-- <div ng-dropdown-multiselect="" translation-texts="$ctrl.tagsSelectText" options="$ctrl.tagsOption" selected-model="$ctrl.tagsModel" checkboxes="true" extra-settings="$ctrl.tagsSelectSetting"  name="tags" required=""></div> -->
             <!-- <div ng-dropdown-multiselect="" options="$ctrl.tagsOption" selected-model="$ctrl.tagsModel" extra-settings="$ctrl.tagsSelectSetting"></div>-->
             <!-- <span class="fix-right ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o fa-2x"></i></span> -->
-            <span class="fix-right" ng-click="$ctrl.tagsToggleFun()" ng-init="$ctrl.tagsToggle=1" tooltip-placement="right" data-toggle="collapse" data-target="#collapse-tags" uib-tooltip="Show/hide tags"><i class="fa fa-arrow-down fa-2x"></i></span>
+            <span class="fix-right" tooltip-placement="right" data-toggle="collapse" data-target="#collapse-tags" uib-tooltip="Show/hide tags"><i class="fa fa-arrow-down fa-2x"></i></span>
 
           </div>
           <div id="collapse-tags" class="form-group test-center-tm collapse-tags" ng-if="$ctrl.tagsToggle!==1">
-            <div class="col-md-12 test-center-tz" id="tags{{tags.id}}" ng-init="$ctrl.tagToggle[tags.id]=0" ng-repeat="tags in $ctrl.tagsData.tags">
-              <div class="test-center-tp">
+            <div class="col-md-12 test-center-tz" id="tags{{tags.id}}" ng-init="$ctrl.tagToggle[tags.id]=0;$ctrl.tagToggleIconClass[tags.id] = 'fa-plus-square-o';" ng-repeat="tags in $ctrl.tagsData.tags">
+              <div class="test-center-tp" style="cursor:pointer;" ng-click="$ctrl.tagToggleDynamic(tags.id)">
                 <p>{{tags.name}}</p>
                 <!-- <span style="cursor:pointer;" class="fix-right" ng-click="$ctrl.tagToggleDynamic(tags.id)"><i class="fa fa-caret-square-o-down" uib-tooltip="Show/hide " aria-hidden="true"></i></span> -->
-                <span style="cursor:pointer;" class="fix-right" ng-click="$ctrl.tagToggleDynamic(tags.id)"><i class="fa fa-plus-square-o" uib-tooltip="Show/hide " aria-hidden="true"></i></span>
+                <span style="cursor:pointer;" class="fix-right"><i class="fa {{$ctrl.tagToggleIconClass[tags.id]}}" uib-tooltip="Show/hide " aria-hidden="true"></i></span>
               </div>
               <!-- <input type="checkbox" ng-repeat="child in tags.children" /> test1<br> -->
               <!-- {{$ctrl.tagCheckboxModel[tags.id]}} -->
               <div class="test-center-bg checkboxFive2 tags" ng-show="$ctrl.tagToggle[tags.id]" ng-repeat="child in tags.children track by $index">
-                <input type="checkbox" id="tag-{{tags.id}}-child-{{child.id}}" name="tag{{tags.id}}[]" {{$ctrl.checkedString[child.id]}}  ng-model="$ctrl.tagCheckboxModel[child.id]" ng-click="$ctrl.toggleChecked(child.id,$ctrl.tagCheckboxModel[child.id]);" />
-                <span>{{child.name}}</span>
+                <input type="checkbox" id="tag-{{tags.id}}-child-{{child.id}}" name="tag{{tags.id}}[]" {{$ctrl.checkedString[child.id]}} ng-model="$ctrl.tagCheckboxModel[child.id]" ng-click="$ctrl.toggleChecked(child.id,$ctrl.tagCheckboxModel[child.id]);" />
+                <span style="cursor:pointer;" ng-click="$ctrl.toggleChecked(child.id,$ctrl.tagCheckboxModel[child.id],'label_click');">{{child.name}}</span>
                 <label for="tag-{{tags.id}}-child-{{child.id}}" class="tooltiptext {{$ctrl.checkedString[child.id]}}"></label>
               </div>
             </div>
