--- a/app/myProfile/addTestCenter/publishAds/view.html
+++ b/app/myProfile/addTestCenter/publishAds/view.html
@@ -4,14 +4,14 @@
       <span class="member-cart" style="cursor:pointer;" ng-click="$ctrl.goToCart()">
         <img src="themes/addiction/images/png/Cart-Icon.png" />
       </span>
-      <div class="progress progress-grediant">
+      <!-- <div class="progress progress-grediant">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
           <span class="stick-me">70%</span>
           <p class="">
             <img src="themes/addiction/images/png/Cart-Icon.png" />
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="clearfix"></div>
