--- a/app/myProfile/addTestCenter/updateMembership/view.html
+++ b/app/myProfile/addTestCenter/updateMembership/view.html
@@ -2,14 +2,14 @@
   <div class="progressbar">
     <div class="col-md-6 col-md-offset-6">
       <!-- <span class="member-cart"><img src="themes/addiction/images/png/Cart-Icon.png" /></span> -->
-      <div class="progress progress-grediant">
+      <!-- <div class="progress progress-grediant">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
           <span class="stick-me">70%</span>
           <p class="">
             <img src="themes/addiction/images/png/Cart-Icon.png" />
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="clearfix"></div>
