--- a/app/signUp/optionalFields/view.html
+++ b/app/signUp/optionalFields/view.html
@@ -64,7 +64,7 @@
               <i class="fa fa-times" ng-show="$ctrl.logoPreview" style="padding-left:5px;cursor:pointer;" ng-click="$ctrl.deleteLogo()" aria-hidden="true" tooltip-placement="right" uib-tooltip="Please upload the logo of your company/treatment center"></i>
             </div>
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload images of your company/treatment center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please upload logo of your Treatment Center"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
           <div class="form-group clear-me">
@@ -75,7 +75,7 @@
               <input name="gallery[]" id="gallery_data" class="file" type="file" file-model="$ctrl.galleryData" onchange="angular.element(this).scope().imagePreviewMulti(this)" multiple="multiple" accept="image/*">
             </div>
             <div class="pull-right">
-              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Explaination of each field here"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
+              <span class="ng-binding" tooltip-placement="right" uib-tooltip="Please enter photos of your Treatment Center Gallery to show"><i class="fa fa-question-circle-o c-orange fa-2x"></i></span>
             </div>
           </div>
 
