Updated edit publishAds, sponsored page from myprofile center details

--- a/app/myProfile/testCenterDetails/view.html
+++ b/app/myProfile/testCenterDetails/view.html
@@ -62,7 +62,8 @@
                   </div>
                   <div class="col-md-2 text-center">
                     <div class="col-md-12">
-                      <span><i class="fa fa-long-arrow-up" style="visibility:hidden;"></i></span>
+                      <!-- <span><i class="fa fa-long-arrow-up" style="visibility:hidden;"></i></span> -->
+                      <span style="cursor:pointer;" ng-click="$ctrl.editSponsor(item.id,item.name, item);"><i class="fa fa-pencil"></i></span>
                     </div>
                     <!-- <div class="col-md-12">
                                     <span><i class="fa fa-trash" ></i></span>
