--- a/app/myProfile/addTestCenter/productDetails/view.html
+++ b/app/myProfile/addTestCenter/productDetails/view.html
@@ -47,8 +47,10 @@
         <div class="row" ng-repeat="item in $ctrl.cartDetails.items" ng-init="$ctrl.productShow[item.id]=0;$ctrl.centerToggleIconClass[item.id]='fa-plus-square-o';">
           <div class="col-md-12">
             <div class="col-md-4">
-              <span style="cursor:pointer;" class="fix-left" ng-click="$ctrl.centerToggle(item.id)"><i class="fa {{$ctrl.centerToggleIconClass[item.id]}}" uib-tooltip="Show/hide " aria-hidden="true"></i></span>
-              <span>{{item.name}}</span>
+              <span style="cursor:pointer;" class="fix-left" ng-click="$ctrl.centerToggle(item.id)"><i class="fa {{$ctrl.centerToggleIconClass[item.id]}}" uib-tooltip="Show/hide " aria-hidden="true"></i>
+                <span>{{item.name}}</span>
+              </span>
+
             </div>
             <div class="col-md-5">
               <span>Total</span>
@@ -57,7 +59,7 @@
               <span>10$</span>
             </div>
             <div class="col-md-1">
-              <span style="cursor:pointer;" ng-click="$ctrl.editCenter(item.id, item.name,item);"><i class="fa fa-pencil" aria-hidden="true"></i></span>
+              <span style="cursor:pointer;" ng-click="$ctrl.editCenter(item.id, item.name,item, $index);"><i class="fa fa-pencil" aria-hidden="true"></i></span>
             </div>
           </div>
           <div class="col-md-12" ng-show="$ctrl.productShow[item.id]" ng-init="$ctrl.membershipShow[item.id]=0; $ctrl.membershipToggleIconClass[item.id]='fa-plus-square-o';">
@@ -278,8 +280,8 @@
     </div>
 
     <div class="col-md-12">
-    <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goHome();">Home</a></p>
-     <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
+      <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goHome();">Home</a></p>
+      <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
       <p class="stick-next-left font-normal " style="margin-left:20%;"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish Ads</a></p>
       <p class="stick-next-left font-normal back-button"><a href="javascript:;" ng-click="$ctrl.goBack();">Back</a></p>
       <!-- <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p> -->
