--- a/app/myProfile/addTestCenter/sponsoredPage/view.html
+++ b/app/myProfile/addTestCenter/sponsoredPage/view.html
@@ -18,17 +18,14 @@
             <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
           </div>
           <div class="col-sm-4" ng-show="1">
-            Active Cart:
-            <!-- <select ng-model="$root.activeCenter" ng-init="$root.activeCenter=$ctrl.treatmentCenters[0].id">
-          <option ng-repeat="center in $ctrl.treatmentCenters" value="{{center.id}}">{{center.label}} - {{center.id}}</option>
-        </select> -->
+            <!-- Active Cart:
 
             <select ng-model="$root.activeCenter" ng-options="center.id as center.label for center in $ctrl.treatmentCenters" ng-change="$root.onInit()">
-            </select>
+            </select> -->
+            <span class="member-cart" style="cursor:pointer;" ng-click = "$ctrl.skipTo()">
+              <img src="themes/addiction/images/png/Cart-Icon.png" /><span> [Total Items: {{$root.totalCartItems}}]</span>
+            </span>
 
-            <!-- <label ng-repeat="center in $ctrl.treatmentCenters" ng-init="$root.activeCenter=$ctrl.treatmentCenters[0].id">
-          <input type="checkbox" ng-true-value="{{center.id}}" ng-change="$root.onInit()" ng-model="$root.activeCenter" value="{{center.id}}" /> {{center.label}} {{center.id}}
-        </label> -->
           </div>
         </div>
         <!-- Search By State Section -->
