--- a/app/signUp/sponsoredPage/view.html
+++ b/app/signUp/sponsoredPage/view.html
@@ -18,25 +18,23 @@
             <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
           </div>
           <div class="col-sm-4" ng-show="1">
-            Active Cart:
-            <!-- <select ng-model="$root.activeCenter" ng-init="$root.activeCenter=$ctrl.treatmentCenters[0].id">
-          <option ng-repeat="center in $ctrl.treatmentCenters" value="{{center.id}}">{{center.label}} - {{center.id}}</option>
-        </select> -->
-
+            <!-- Active Cart:
             <select ng-model="$root.activeCenter" ng-options="center.id as center.label for center in $ctrl.treatmentCenters" ng-change="$root.onInit()">
-            </select>
+            </select> -->
+            <span class="member-cart" style="cursor:pointer;" ng-click = "$ctrl.skipTo()">
+              <img src="themes/addiction/images/png/Cart-Icon.png" /><span> [Total Items: {{$root.totalCartItems}}]</span>
+            </span>
 
-            <!-- <label ng-repeat="center in $ctrl.treatmentCenters" ng-init="$root.activeCenter=$ctrl.treatmentCenters[0].id">
-          <input type="checkbox" ng-true-value="{{center.id}}" ng-change="$root.onInit()" ng-model="$root.activeCenter" value="{{center.id}}" /> {{center.label}} {{center.id}}
-        </label> -->
           </div>
         </div>
+      tesssss:  {{$root.centerSelected}}
+      st:{{$root.checkedStateDetail}}
         <!-- Search By State Section -->
         <sponsor-state-select></sponsor-state-select>
         <cart-detail> </cart-detail>
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
           <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
-            <input id="previous" class="btn modal_btn btn_size pull-left" value="Back" type="button" ng-click="$ctrl.previous()">
+            <!-- <input id="previous" class="btn modal_btn btn_size pull-left" value="Back" type="button" ng-click="$ctrl.previous()"> -->
             <input type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$ctrl.treatmentCentersModel.length===0 || $root.centerSelected.length===0">
             <input type="button" ng-click="$ctrl.skipTo()" class="btn modal_btn btn_size pull-right" value="Skip" id="skip">
           </div>
